Fixes line-height for h1 in readme, instead of overflow 'hack'.
Removes scrolling due to to small line-height. This is an alternative solution
to #350 and #352, as adding overflow hidden doesn't solve the problem, but
potentially cuts the lower part of the font.

--- a/assets/styles/readme.styl
+++ b/assets/styles/readme.styl
@@ -5,9 +5,8 @@
     margin 0
     padding 0
     text-align left
-    line-height 1.2
+    line-height 1.25
     @extend .ellipsis
-    overflow-y hidden
 
   hgroup
     margin 20px 0
